final project section added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -49,7 +50,15 @@ Gaurav Dubey</div>
 <div class="text-3">
 And I'm a <span class="typing"></span></div>
 <a href="https://www.linkedin.com/in/gaurav-dubey-985324148/">Hire me</a>
+
+<a href="https://www.facebook.com/gaurav.dubey.908579/" class="fa fa-facebook"></a>
+<a href="https://twitter.com/GauravD68885675" class="fa fa-twitter"></a>
+<a href="https://www.instagram.com/dubey_gaurav_/?hl=en" class="fa fa-instagram"></a>
+<a href="https://www.linkedin.com/in/gaurav-dubey-985324148/" class="fa fa-linkedin"></a>
+<a href="https://github.com/gauravdubey101" class="fa fa-github"></a>
+
             </div>
+           
 </div>
 </section>
 
@@ -86,25 +95,25 @@ My services</h2>
                         <div class="text">
 Web Design</div>
 <p>
-Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+Build Mordern Website Design on demand</p>
 </div>
 </div>
 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">
-Advertising</div>
+Content Writing</div>
 <p>
-Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+write tech content writting related to tending web development technologies  </p>
 </div>
 </div>
 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">
-Apps Design</div>
+Web-Apps Design</div>
 <p>
-Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+Create website from schratch to deployment.</p>
 </div>
 </div>
 </div>
@@ -151,13 +160,21 @@ My creative skills & experiences.</div>
                         </div>
 <div class="line js">
 </div>
+<br>
+<div class="bars">
+    <div class="info">
+        <span>NodeJs</span>
+        <span>75%</span>
+    </div>
+<div class="line nodejs">
+</div>
 </div>
 <div class="bars">
                         <div class="info">
                             <span>C++</span>
                             <span>50%</span>
                         </div>
-<div class="line php">
+<div class="line cpluse">
 </div>
 </div>
 <div class="bars">
@@ -165,7 +182,15 @@ My creative skills & experiences.</div>
                             <span>MongoDb</span>
                             <span>70%</span>
                         </div>
-<div class="line mysql">
+<div class="line mongo">
+    <br>
+    <div class="bars">
+        <div class="info">
+            <span>Git</span>
+            <span>90%</span>
+        </div>
+<div class="line git">
+</div>
 </div>
 </div>
 </div>
@@ -185,7 +210,7 @@ My teams</h2>
                         <div class="text">
 Rahul Dev</div>
 <p>
-Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+Web Developer</p>
 </div>
 </div>
 <div class="card">
@@ -194,7 +219,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <div class="text">
 Happy Singh</div>
 <p>
-Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+SEO Expert</p>
 </div>
 </div>
 <div class="card">
@@ -203,7 +228,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <div class="text">
 Abhishek</div>
 <p>
-Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+Python Developer</p>
 </div>
 </div>
 <div class="card">
@@ -212,7 +237,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <div class="text">
 Rohit</div>
 <p>
-Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+Digital Marketer</p>
 </div>
 </div>
 <div class="card">
@@ -221,11 +246,25 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <div class="text">
 Coding Buddy</div>
 <p>
-Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    Competitive Programmer</p>
 </div>
 </div>
 </div>
 </div>
+</section>
+
+<!-- project section -->
+
+<section class="project" id="project">
+    <div class="column">
+        <div class="card">
+          <p><i class="fa fa-check"></i></p>
+          <h3>10+</h3>
+          <p><a href="https://github.com/gauravdubey101">Projects</a></p>
+        </div>
+      </div>
+    
+
 </section>
 
     <!-- contact section start -->
